xml benchmarks (SGEN on and off)

--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,7 @@
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->
     <clear />
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="corefx CI" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
     <add key="bdn-CI" value="https://ci.appveyor.com/nuget/benchmarkdotnet" />
  </packageSources>
 </configuration>
