--- a/Benchmarks/Benchmarks.csproj
+++ b/Benchmarks/Benchmarks.csproj
@@ -11,7 +11,12 @@
     <PackageReference Include="Jil" Version="2.15.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
+    <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
+  </ItemGroup>
+    
+  <ItemGroup Condition="'$(Configuration)' == 'SGEN' ">
+    <PackageReference Include="Microsoft.XmlSerializer.Generator" Version="2.0.0-preview2-26216-03" />
   </ItemGroup>
 
 </Project>
