--- a/Benchmarks/Benchmarks.csproj
+++ b/Benchmarks/Benchmarks.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Utf8Json" Version="1.3.7" />
     <PackageReference Include="ZeroFormatter" Version="1.6.4" />
     <PackageReference Include="ZeroFormatter.Analyzer" Version="1.1.1" />
+    <DotNetCliToolReference Include="Microsoft.XmlSerializer.Generator" Version="2.0.0-preview2-26216-03" />
   </ItemGroup>
     
   <ItemGroup Condition="'$(Configuration)' == 'SGEN' ">
